--- a/src/components/Atoms/Heading/style.css
+++ b/src/components/Atoms/Heading/style.css
@@ -34,7 +34,7 @@
 
 @media (max-width: 1024px) {
   .brand, .dark {
-    font-size: 16px;
+    font-size: 24px;
     line-height: 1.3;
   }
 }
